# exemplo-etl

./: README.md  mkdocs.yml  pyproject.toml
app/: main.py
app/pipeline/: extract.py  transform.py
tests/: test_pipeline.py
