[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = ""
authors = ["Alexandre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
