[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = ""
authors = ["Alexandre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.2"
requests = "^2.32.3"
isort = "^5.13.2"
blue = "^0.9.1"
mkdocs = "^1.6.0"
mkdocstrings-python = "^1.10.7"
pygments = "^2.18.0"
mkdocs-material = "^9.5.31"
pymdown-extensions = "^10.9"
mkdocs-bootstrap386 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
known_third_party = []